--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name" : "company/demobundle",
+    "name" : "tomanio79/wysiwyg",
     "description" : "A wysiwyg bundle",
     "type" : "symfony-bundle",
     "version": "0.3.0-beta.5",
@@ -25,7 +25,7 @@
     }],
     "extra" : {
     "branch-alias" : {
-            "dev-master" : "1.0"
+            "dev-master" : "2.1-dev"
         }
     }
 }
